# minet

./: README.md  environment.yml  pyproject.toml
minet/: cooccurrence.py  cytoscape.py  fdr.py  interaction_analysis.py  main.py  network.py  preprocess.py  utility.py
tests/: test_interaction.py  test_network.py
tests/data/conditional_occurrence_directionality/: .gitignore  feature-table.tsv  graph_test.xml  microbial_association_direction.tsv  result.tsv
