[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "minet"
version = "0.0.1"
authors = [
    {name = "Seungpyo Hong", email = "seungpyo.hong@jbnu.ac.kr"},
]
readme = "README.md"
requires-python = ">=3.12.2"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
]

[project.scripts]
minet = "minet.main:main"
